refactor: 完成JVM基础部分的整理